fixed spacing issue on mobile portfolio

--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -171,6 +171,10 @@ html { overflow-y: scroll; }
 
 @media screen and (max-width:450px) 
 {
+  .grid {
+    left: 0;
+    max-width: 100%;
+  }
   .grid-item
   {
     width: 100%;
